Update collection js

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
       <meta charset="utf-8">
-      <title></title>
+      <title>VolaStoker is</title>
       <link rel="stylesheet" href="bulma.css">
       <link rel="stylesheet" href="popup.css">
     </head>
